fixed scrollbar styles bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,12 @@
 
 /*html, body, heading*/
 @layer base {
+
+
+  * {
+    @apply !scrollbar !scrollbar-track-transparent !scrollbar-thumb-red-500;
+  }
+
   body {
     @apply bg-[#141414] text-white;
   }
